# cstat

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/commands/: release.md
.github/workflows/: ci.yml  release.yml
.tasks/: 001-scaffold-stdin-minimal-render.md  002-context-bar-with-thresholds.md  003-config-toml.md  004-state-incremental-transcript.md  005-tools-activity-line.md  006-agents-tracking.md  007-todos-progress.md  008-git-branch-dirty.md  009-session-duration.md  010-usage-api.md  011-graceful-degradation-render-tests.md  012-ci-workflow-github-repo.md  013-publish-crates-io.md  prd.md
scripts/: release.sh
src/: config.rs  git.rs  main.rs  render.rs  state.rs  stdin.rs  transcript.rs  types.rs  usage.rs
tests/: integration.rs
