[package]
name = "cstat"
version = "0.4.1"
edition = "2021"
description = "minimal statusline for claude code"
license = "MIT"
repository = "https://github.com/basuev/cstat"
homepage = "https://github.com/basuev/cstat"
keywords = ["claude", "statusline", "cli"]
categories = ["command-line-utilities"]
exclude = [".tasks/", "scripts/", "CLAUDE.md"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
toml = "0.8"
memmap2 = "0.9"
dirs = "6"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
